--- a/CoreDemo/Views/Message/InBox.cshtml
+++ b/CoreDemo/Views/Message/InBox.cshtml
@@ -31,5 +31,5 @@
     }
 </table>
 
-<a href="/Blog/BlogAdd/" class="btn btn-primary"> Yeni Blog Oluştur</a>
+<a href="/Blog/BlogAdd/" class="btn btn-primary"> Yeni Mesaj Oluştur</a>
 
