--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -40,7 +40,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Writer/WriterMessage/">
+            <a class="nav-link" href="/Message/InBox/">
                 <span class="menu-title">Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
             </a>
@@ -65,7 +65,7 @@
                 <i class="mdi mdi-settings menu-icon"></i>
             </a>
         </li>
-        <li class="nav-item">
+       <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="/Login/LogOut/" aria-expanded="false" aria-controls="general-pages">
                 <span class="menu-title">Çıkış Yap</span>
                 <i class="menu-arrow"></i>
