--- a/CoreDemo/Views/Message/SendBox.cshtml
+++ b/CoreDemo/Views/Message/SendBox.cshtml
@@ -1,12 +1,11 @@
 ﻿@using EntityLayer.Concrete
 @model List<Message2>
 @{
-    ViewData["Title"] = "InBox";
+    ViewData["Title"] = "SendMessage";
     Layout = "~/Views/Shared/WriterLayout.cshtml";
 }
 
-
-<h1>Gelen Kutusu</h1>
+<h1>Giden Kutusu</h1>
 
 <table class="table table-bordered">
     <tr>
@@ -23,7 +22,7 @@
         <tr>
             <th>@item.MessageID</th>
             <td>@item.Subject</td>
-            <td>@item.SenderUser.WriterName</td>
+            <td>@item.ReceiverUser.WriterName</td>
             <td> @(((DateTime) item.MessageDate).ToString("dd-MMMM-yyyy"))</td>
             <td><a href="/Message/MessageDetails/@item.MessageID" class="btn btn-warning">Mesajı Aç</a></td>
         </tr>
