--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -8,8 +8,8 @@
                     <!--change to offline or busy as needed-->
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                    <span class="font-weight-bold mb-2">Yazarın Adı Soyadı</span>
-                    <span class="text-secondary text-small">Yazılım Mühendisi</span>
+                    <span class="font-weight-bold mb-2">Berkan Çelik (Static)</span>
+                    <span class="text-secondary text-small">Back End Developer (Static)</span>
                 </div>
                 <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
             </a>
@@ -41,8 +41,15 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Message/InBox/">
-                <span class="menu-title">Mesajlar</span>
+                <span class="menu-title">Gelen Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/Message/SendBox/">
+                <span class="menu-title">Giden Mesajlar</span>
+                <i class="mdi mdi-message-alert menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
@@ -65,7 +72,7 @@
                 <i class="mdi mdi-settings menu-icon"></i>
             </a>
         </li>
-       <li class="nav-item">
+        <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="/Login/LogOut/" aria-expanded="false" aria-controls="general-pages">
                 <span class="menu-title">Çıkış Yap</span>
                 <i class="menu-arrow"></i>
