--- a/CoreDemo/Areas/Admin/Views/AdminMessage/Inbox.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminMessage/Inbox.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Message2>
 @{
     ViewData["Title"] = "Inbox";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
@@ -29,10 +30,10 @@
                             <div class="file-manager">
                                 <a class="btn btn-block btn-primary compose-mail" href="mail_compose.html">Mesaj Kutusu</a>
                                 <div class="space-25"></div>
-                                <h5>Folders</h5>
+                                <h5>Klasörler</h5>
                                 <ul class="folder-list m-b-md" style="padding: 0">
-                                    <li><a href="mailbox.html"> <i class="fa fa-inbox "></i> Gelen Mesajlar <span class="label label-warning float-right">16</span> </a></li>
-                                    <li><a href="mailbox.html"> <i class="fa fa-envelope-o"></i> Giden MEsajlar</a></li>
+                                    <li><a href="/Admin/AdminMessage/Inbox/"> <i class="fa fa-inbox "></i> Gelen Mesajlar <span class="label label-warning float-right">16</span> </a></li>
+                                    <li><a href="/Admin/AdminMessage/Sendbox/"> <i class="fa fa-envelope-o"></i> Giden Mesajlar</a></li>
                                     <li><a href="mailbox.html"> <i class="fa fa-certificate"></i> Önemli</a></li>
                                     <li><a href="mailbox.html"> <i class="fa fa-file-text-o"></i> Taslaklar <span class="label label-danger float-right">2</span></a></li>
                                     <li><a href="mailbox.html"> <i class="fa fa-trash-o"></i> Çöp Kutusu</a></li>
@@ -58,7 +59,7 @@
                                 <input type="text" class="form-control form-control-sm" name="search" placeholder="Search email">
                                 <div class="input-group-btn">
                                     <button type="submit" class="btn btn-sm btn-primary">
-                                        Search
+                                        Mail Ara
                                     </button>
                                 </div>
                             </div>
@@ -73,9 +74,9 @@
 
                             </div>
                             <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="left" title="Refresh inbox"><i class="fa fa-refresh"></i> Refresh</button>
-                            <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Mark as read"><i class="fa fa-eye"></i> </button>
-                            <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Mark as important"><i class="fa fa-exclamation"></i> </button>
-                            <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Move to trash"><i class="fa fa-trash-o"></i> </button>
+                            <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Okundu olarak işaretle"><i class="fa fa-eye"></i> </button>
+                            <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Önemli olarak işaretle"><i class="fa fa-exclamation"></i> </button>
+                            <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Çöp Kutusuna Taşı"><i class="fa fa-trash-o"></i> </button>
 
                         </div>
                     </div>
@@ -83,186 +84,25 @@
 
                         <table class="table table-hover table-mail">
                             <tbody>
-                                <tr class="unread">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Anna Smith</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                                    <td class=""><i class="fa fa-paperclip"></i></td>
-                                    <td class="text-right mail-date">6.10 AM</td>
-                                </tr>
-                                <tr class="unread">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks" checked>
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Jack Nowak</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Aldus PageMaker including versions of Lorem Ipsum.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">8.22 PM</td>
-                                </tr>
+
+                                @foreach (var item in Model)
+                                {
                                 <tr class="read">
                                     <td class="check-mail">
                                         <input type="checkbox" class="i-checks">
                                     </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Facebook</a> <span class="label label-warning float-right">Clients</span> </td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Many desktop publishing packages and web page editors.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Jan 16</td>
+                                    <td class="mail-ontact"><a href="mail_detail.html">@item.ReceiverUser.WriterName</a></td>
+                                    <td class="mail-subject"><a href="mail_detail.html">>@item.Subject.</a></td>
+                                    <td class="text-right mail-date">@item.MessageDate</td>
                                 </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Mailchip</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">There are many variations of passages of Lorem Ipsum.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Mar 22</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Alex T.</a> <span class="label label-danger float-right">Documents</span></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                                    <td class=""><i class="fa fa-paperclip"></i></td>
-                                    <td class="text-right mail-date">December 22</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Monica Ryther</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">The standard chunk of Lorem Ipsum used.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Jun 12</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Sandra Derick</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Contrary to popular belief.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">May 28</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Patrick Pertners</a> <span class="label label-info float-right">Adv</span></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">If you are going to use a passage of Lorem </a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">May 28</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Michael Fox</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Humour, or non-characteristic words etc.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Dec 9</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Damien Ritz</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Oor Lorem Ipsum is that it has a more-or-less normal.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Jun 11</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Anna Smith</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                                    <td class=""><i class="fa fa-paperclip"></i></td>
-                                    <td class="text-right mail-date">6.10 AM</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Jack Nowak</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Aldus PageMaker including versions of Lorem Ipsum.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">8.22 PM</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Mailchip</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">There are many variations of passages of Lorem Ipsum.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Mar 22</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Alex T.</a> <span class="label label-warning float-right">Clients</span></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                                    <td class=""><i class="fa fa-paperclip"></i></td>
-                                    <td class="text-right mail-date">December 22</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Monica Ryther</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">The standard chunk of Lorem Ipsum used.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Jun 12</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Sandra Derick</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Contrary to popular belief.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">May 28</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Patrick Pertners</a> </td>
-                                    <td class="mail-subject"><a href="mail_detail.html">If you are going to use a passage of Lorem </a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">May 28</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Michael Fox</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Humour, or non-characteristic words etc.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Dec 9</td>
-                                </tr>
-                                <tr class="read">
-                                    <td class="check-mail">
-                                        <input type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="mail-ontact"><a href="mail_detail.html">Damien Ritz</a></td>
-                                    <td class="mail-subject"><a href="mail_detail.html">Oor Lorem Ipsum is that it has a more-or-less normal.</a></td>
-                                    <td class=""></td>
-                                    <td class="text-right mail-date">Jun 11</td>
-                                </tr>
+                                }
                             </tbody>
                         </table>
-
-
                     </div>
                 </div>
             </div>
         </div>
-
+        </div>
 </body>
 
 </html>
