--- a/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
+++ b/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
@@ -31,8 +31,8 @@
                 <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Mesajlar </span><span class="label label-warning float-right">0/0</span></a>
                 <ul class="nav nav-second-level collapse">
                     <li><a href="/Admin/AdminMessage/Inbox/">Gelen Kutusu</a></li>
-                    <li><a href="mail_detail.html">Giden Kuutusu</a></li>
-                    <li><a href="mail_compose.html">Yeni Mesaj Oluştur</a></li>
+                    <li><a href="/Admin/AdminMessage/Sendbox/">Giden Kuutusu</a></li>
+                    <li><a href="/Admin/AdminMessage/ComposeMessage/">Yeni Mesaj Oluştur</a></li>
                 </ul>
             </li>
             <li>
