--- a/CoreDemo/Views/Shared/AdminLayout.cshtml
+++ b/CoreDemo/Views/Shared/AdminLayout.cshtml
@@ -140,15 +140,31 @@
 
                         <li>
                             <a href="login.html">
-                                <i class="fa fa-sign-out"></i> Çıkış Yap
+                                <i class="fa fa-sign-out"></i> Log out
                             </a>
                         </li>
                     </ul>
 
                 </nav>
             </div>
-           
-              
+            <div class="row wrapper border-bottom white-bg page-heading">
+                <div class="col-lg-10">
+                    <h2>Static Tables</h2>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a>Tables</a>
+                        </li>
+                        <li class="breadcrumb-item active">
+                            <strong>Static Tables</strong>
+                        </li>
+                    </ol>
+                </div>
+                <div class="col-lg-2">
+
+                </div>
             </div>
             <div class="wrapper wrapper-content animated fadeInRight">
                 @RenderBody()
@@ -187,7 +203,8 @@
     <!-- Peity -->
     <script src="~/inspinia-gh-pages/js/demo/peity-demo.js"></script>
 
-    <script>$(document).ready(function(){
+    <script>
+    $(document).ready(function () {
             $('.i-checks').iCheck({
                 checkboxClass: 'icheckbox_square-green',
                 radioClass: 'iradio_square-green',
