--- a/CoreDemo/Areas/Admin/Views/AdminBlog/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminBlog/Index.cshtml
@@ -19,8 +19,8 @@
                     <div class="ibox">
                         <div class="ibox-content product-box">
 
-                            <div class="product-imitation">
-                                [ INFO ]
+                            <div >
+                                <img src="@item.BlogImage" height="225" width="283" />
                             </div>
                             <div class="product-desc">
                                 <span class="product-price">
@@ -36,7 +36,7 @@
                                 </div>
                                 <div class="m-t text-righ">
 
-                                    <a href="#" class="btn btn-xs btn-outline btn-primary">Detaylar <i class="fa fa-long-arrow-right"></i> </a>
+                                    <a href="/Blog/BlogReadAll/@item.BlogID" class="btn btn-xs btn-outline btn-primary">Detaylar <i class="fa fa-long-arrow-right"></i> </a>
                                 </div>
                             </div>
                         </div>
