--- a/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
+++ b/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
@@ -45,7 +45,7 @@
                 <a href="#"><i class="/Admin/AdminBlog/Index/"></i>  <span class="nav-label">Bloglar</span>  </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-comment"></i> <span class="nav-label">Yorumlar</span>  </a>
+                <a href="/Admin/AdminComment/Index/"><i class="fa fa-comment"></i> <span class="nav-label">Yorumlar</span>  </a>
             </li>
             <li>
                 <a href="/Admin/Writer/Index/"><i class="fa fa-user"></i> <span class="nav-label">Yazarlar</span>  </a>
