--- a/CoreDemo/Areas/Admin/Views/AdminRole/AssignRole.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminRole/AssignRole.cshtml
@@ -1,15 +1,19 @@
-﻿@using CoreDemo.Areas.Admin.Models
-@model List<RoleAssignViewModel>
+﻿@model List<RoleAssignViewModel>
 @{
     ViewData["Title"] = "AssignRole";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
 
 <form>
-    @for(int i=0;i<Model.Count; i++)
-            {
-                <div class="form-control">
-                    <input type="hidden" clas/>
-                </div>
-            }
+    @for (int i = 0; i < Model.Count; i++)
+    {
+        <div class="form-check">
+            <input type="hidden" asp-for="@Model[i].RoleID" />
+            <input type="hidden" asp-for="@Model[i].Name" />
+            <input type="checkbox" asp-for="@Model[i].Exists" class="form-check-input" />
+            <label class="form-check-label" for="@Model[i].Exists">@Model[i].Name</label>
+        </div>
+    }
+    <button class="btn btn-info">Değişiklikleri Kaydet</button>
 </form>
+<a href="/Admin/AdminRole/UserRoleList/" class="btn btn-primary">Kullanıcı Listesine Döne</a>
