--- a/CoreDemo/Areas/Admin/Views/AdminRole/UserRoleList.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminRole/UserRoleList.cshtml
@@ -17,7 +17,7 @@
     {
         <tr>
             <td>@item.UserName</td>
-            <td><a href="/Admin/AdminRole/AssginRole/@item.Id" class="btn btn-outline-twitter">Rol Ata </a></td>
+            <td><a href="/Admin/AdminRole/AssginRole/@item.Id/" class="btn btn-outline-twitter">Rol Ata </a></td>
         </tr>
     }
 </table>
